[package]
name = "wasm-canvas"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"
ray-tracer = "0.1.0"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.27"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
  'Window',
  'ImageBitmap'
]

[dependencies.rand]
version = "0.7.1"
features = [
  'wasm-bindgen',
  'stdweb'
]